Fix app-view not reserving enough space for the two-line controls pane
This caused the uppermost navigation target "#" of the alphabet navigation to
be half-hidden under the controls bar. Also, in the Albums view, the first
artist name was overlapped a bit by the controls bar.

--- a/css/app/music.css
+++ b/css/app/music.css
@@ -68,6 +68,10 @@ body#body-user.dark {
 	padding-top: 66px;
 }
 
+#app-view.started:has(+ #controls.two-line) {
+	padding-top: 90px;
+}
+
 .view-container {
 	padding-bottom: 60px;
 }
